Add endpoint to get the result of a run
