# src/controllers/runs.controller.js
@@ -13,12 +13,25 @@ router.get('/runs', async (req, res, next) => {
         next(e);
     }
 });
+
 router.get('/runs/:id', async (req, res, next) => {
     try {
         let id = req.params.id;
         let run = await runsDelegate.get(id);
 
         res.json(run);
+    } catch (e) {
+        // we delegate to the error-handling middleware
+        next(e);
+    }
+});
+
+router.get('/runs/:id/result', async (req, res, next) => {
+    try {
+        let id = req.params.id;
+
+        let result = await runsDelegate.getResult(id);
+        res.json(result);
     } catch (e) {
         // we delegate to the error-handling middleware
         next(e);
